--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,45 @@
+body {
+  background: linear-gradient(20deg, rgb(219, 112, 147), rgb(218, 163, 87));
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
   color: white;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Abel", sans-serif;
 }
 
-.App-intro {
-  font-size: large;
+.App h1 {
+  font-size: 32px;
+  margin: 1em 0em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-container {
+  display: flex;
+  width: 70%;
+  justify-content: space-between;
+}
+.role-btn {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid white;
+  color: white;
+  font-family: "Abel", sans-serif;
+  border-radius: 4px;
+  background: none;
+  align-items: center;
+  justify-content: center;
+  width: 11em;
+  height: 6em;
+}
+.role-btn:hover {
+  cursor: pointer;
+}
+.btn-icon {
+  font-size: 2rem;
+}
+.btn-label {
+  font-size: 14px;
 }
